# enhanced-crawler

./: .gitignore  DEVELOPING.md  Dockerfile  Gemfile  Makefile  README.md  build-run.sh  crawl.yml  example-configuration.yml  pyproject.toml
.devcontainer/: devcontainer.json
config/locales/: en.yml
lib/: enhanced_crawler.rb
lib/enhanced_crawler/: config_validator.rb  dns_server.rb  git_cloner.rb  web_server.rb
lib/enhanced_crawler/validation/: predicates.rb  types.rb
src/enhanced_crawler/: config.py  main.py
src/enhanced_crawler/errors/: __init__.py  errors.py
src/enhanced_crawler/servers/: base_server.py  crawler_server.py  dns_server.py  git_server.py  models.py  web_server.py
tests/: test_config.py  test_main.py
tests/scenarios/: invalid_input.yml  only_dirs.yml  only_repos.yml
tests/servers/: test_crawler_server.py  test_dns_server.py  test_git_server.py  test_web_server.py
tests/unit/: conftest.py  test_main.py
tests/unit/config/: test_loader.py  test_transformation.py
tests/unit/config/__snapshots__/: test_transformation.ambr
tests/unit/config/scenarios/: basic_mixed.yml  empty_lists.yml  missing_optional.yml
tests/unit/core/: conftest.py  test_dns_server.py  test_git_server.py  test_web_server.py
